[package]
name = "env-y"
description= "simple env tools"
version = "0.1.0"
edition = "2021"
authors = ["LeafChage <https://github.com/LeafChage>"]
license-file = "LICENSE"
exclude = [ "bin", "Dockerfile"]

[[bin]]
name = "envy"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.2"
anyhow = "1.0.71"
base64 = "0.21.2"
clap = { version = "4.3", features = ["derive"] }
combine = "4.6.6"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
